# scala-native

./: .gitignore  build.sbt
clib/src/main/resources/scala-native/: complex.c  signal.c
native-ide/: CMakeLists.txt  nativelib
nativelib/src/main/resources/scala-native/: CMakeLists.txt
nativelib/src/main/resources/scala-native/gc/: CMakeLists.txt
nativelib/src/main/resources/scala-native/gc/immix-isolates/: Allocator.c  Block.c  BlockAllocator.c  CMakeLists.txt  GCState.c  GCState.h  Heap.c  ImmixGC.c  ImmixGC.h  LargeAllocator.c  Marker.c  Object.c  Settings.c  State.c  State.h
nativelib/src/main/resources/scala-native/gc/immix-isolates/datastructures/: BinaryTree.c  BinaryTree.h  BlockList.c  BlockList.h  Bytemap.c  Bytemap.h
nativelib/src/main/resources/scala-native/gc/immix-isolates/munit/: main.c
nativelib/src/main/resources/scala-native/gc/immix-isolates/munit/tests/: test-sample.c  test-settings.c
nativelib/src/main/resources/scala-native/gc/immix-isolates/test/: README.md  main.c
nativelib/src/main/resources/scala-native/gc/immix-isolates/test/munit/: munit.c
nativelib/src/main/resources/scala-native/gc/immix-isolates/test/tests/: test-btree.c  test-gc.c  test-sample.c  test-settings.c
nativelib/src/main/resources/scala-native/gc/immix_commix/: CMakeLists.txt
nativelib/src/main/resources/scala-native/gc/shared/: CMakeLists.txt
nativelib/src/main/resources/scala-native/isolates/: CMakeLists.txt  IsolateLayer.c  IsolateLayer.h
nativelib/src/main/resources/scala-native/isolates/test/: main.c
nativelib/src/main/resources/scala-native/isolates/test/munit/: munit.h
sandbox/src/main/scala/: Test.scala
sandbox/src/main/scala/isolates/: Channel.scala  Isolate.scala  Message.scala
sandbox/src/main/scala/scala/scalanative/isolates/: Channel.scala  Isolate.scala  Message.scala
sandbox/src/main/scala/scala/scalanative/runtime/: IsolateLayer.scala
sbt-scala-native/src/main/scala/scala/scalanative/sbtplugin/: ScalaNativePlugin.scala  ScalaNativePluginInternal.scala
windowslib/src/main/resources/scala-native/gc/none/: gc.c
